[package]
name = "mmefix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0.70"
envy = "0.4"
winreg = "^0.11.0"

[dependencies.clap]
version = "^4.2.1"
features = ["derive"]

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.windows]
version = "^0.47.0"
features = ["implement", "Win32_Media_Audio_Endpoints", "Win32_UI_Shell_PropertiesSystem", "Win32_System_Com"]